--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -12,9 +12,9 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="v. 0.0.15"
+        android:text="@string/versionApp"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:fontFamily="@font/reef"
         android:layout_marginBottom="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
