--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -33,13 +33,15 @@
             android:layout_width="250dp"
             android:layout_height="55dp"
             android:layout_gravity="center"
-            android:textSize="14dp"
+            android:textSize="14sp"
             android:textColor="@color/white"
             android:layout_marginBottom="20dp"
             android:padding="20dp"
             android:fontFamily="@font/reef"
             android:background="@drawable/etext"
-            android:hint="Email" />
+            android:hint="Email"
+            android:autofillHints=""
+            android:inputType="textEmailAddress" />
 
         <EditText
             android:id="@+id/etLEmailPassword"
@@ -47,13 +49,14 @@
             android:layout_width="250dp"
             android:layout_height="55dp"
             android:layout_gravity="center"
-            android:textSize="14dp"
+            android:textSize="14sp"
             android:textColor="@color/white"
             android:layout_marginBottom="30dp"
             android:padding="20dp"
             android:fontFamily="@font/reef"
             android:background="@drawable/etext"
-            android:hint="Пароль" />
+            android:hint="Пароль"
+            android:autofillHints="" />
 
         <TextView
             android:id="@+id/tvForgotPassword"
@@ -61,18 +64,20 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/reef"
             android:gravity="right"
-            android:text="Забыли пароль?" />
+            android:text="Забыли пароль?"
+            tools:ignore="RtlHardcoded" />
 
         <Button
             android:id="@+id/btnLogin"
-            android:layout_marginTop="30dp"
             android:layout_width="250dp"
-            android:layout_gravity="center"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dp"
             android:background="@drawable/btn"
             android:fontFamily="@font/reef"
-            android:textStyle="bold"
-            android:text="Login" />
+            android:text="Войти"
+            android:textAllCaps="false"
+            android:textStyle="bold" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
