--- a/app/src/main/res/layout/fragment_global_results.xml
+++ b/app/src/main/res/layout/fragment_global_results.xml
@@ -8,14 +8,28 @@
     android:background="@color/mainBackground"
     tools:context=".UI.results.GlobalResultsFragment">
 
+
     <TextView
         android:id="@+id/tvGlobalResult"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Global results"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="0dp"
+        android:text="@string/titleGlobalResult"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/reef"
+        android:gravity="center"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvGlobalResultList"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvGlobalResult" />
 </androidx.constraintlayout.widget.ConstraintLayout>
